# cobalt_alpha

./: .env.example  .gitignore  README.md  docker-compose.phoenix.yml  pyproject.toml
src/cobalt_alpha/: config.py  graph.py  llm_models.py  main.py  setup_phoenix.py
src/cobalt_alpha/prompts/: node_router.md
src/cobalt_alpha/tools/: eval_python.py
tests/: demo_graph_invoke.py  demo_llm_invoke.py
